k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: autorun
  labels:
    app.kubernetes.io/name: autorun
    app.kubernetes.io/part-of: autorun
