k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: autorun
  namespace: autorun
  labels:
    app.kubernetes.io/name: autorun
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: autorun-ip
    networking.gke.io/managed-certificates: autorun-cert
    kubernetes.io/ingress.allow-http: "false"
spec:
  defaultBackend:
    service:
      name: autorun
      port:
        number: 80
